# sbox

./: .gitattributes  .gitignore  CHANGELOG.md  README.md  index.html  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.base.json  tsconfig.json
.github/workflows/: deploy-docs.yml  deploy-web.yml  release.yml
docs-site/.vitepress/: config.ts
docs-site/.vitepress/theme/: Home.vue  index.ts  style.css
docs-site/guide/: codec.md  getting-started.md  keystore-gen.md  xiaoai-login.md
docs-site/zh/: index.md
docs-site/zh/guide/: codec.md  getting-started.md  keystore-gen.md  xiaoai-login.md
scripts/: mac-import-signing-cert.sh  mac-sign.sh  mac-signed-dev.sh  mac-signing-openssl.cnf  release.cjs
src/: App.vue  UpdaterDialog.vue  main.ts  router.ts  save.ts  settings.ts  system.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src-tauri/src/common/: cookies.rs
src-tauri/src/tools/: gdrive_login.rs  image_convert.rs  mod.rs  save_file.rs  screenshot.rs  xiaoai_login.rs
src/tools/: registry.ts
src/tools/codec/: CodecView.vue  codec.ts
src/tools/gdrive-login/: GdriveLoginView.vue  tauri.ts
src/tools/image-convert/: BatchConvert.vue  ImageConvertView.vue  SingleConvert.vue  image-convert.ts
src/tools/json/: JsonView.vue
src/tools/json-convert/: JsonConvertView.vue  convert.ts
src/tools/jwt/: JwtView.vue
src/tools/qrcode/: QrView.vue  qr.ts
src/tools/random-gen/: gen.ts
src/tools/screenshot/: ScreenshotOverlay.vue  screenshot.ts
src/tools/xiaoai-login/: tauri.ts
src/views/: HomeView.vue  SettingsView.vue
