[package]
name = "sbox"
version = "0.0.1"
edition = "2021"

[lib]
name = "sbox_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-process = "2"
tauri-plugin-updater = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["time", "rt", "sync", "macros"] }
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json", "cookies"] }
url = "2"
sha1 = "0.10"
digest = "0.10"
base64 = "0.22"
rand = "0.8"
urlencoding = "2"
log = "0.4"
which = "7"
