[package]
name = "sbox"
version = "0.0.1"
edition = "2021"

[lib]
name = "sbox_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "image-png"] }
tauri-plugin-dialog = "2"
tauri-plugin-process = "2"
tauri-plugin-updater = "2"
tauri-plugin-global-shortcut = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["time", "rt", "sync", "macros"] }
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json", "cookies"] }
url = "2"
sha1 = "0.10"
digest = "0.10"
base64 = "0.22"
rand = "0.8"
urlencoding = "2"
open = "5"
log = "0.4"
tauri-plugin-log = "2"
which = "7"
xcap = "0.9.6"
tauri-plugin-clipboard-manager = "2.3.2"
# 图片格式转换：image 版本与 xcap 内部一致(0.25.x)，Cargo 自动合并不重复引入
image = { version = "0.25", default-features = false, features = [
    "png", "jpeg", "gif", "bmp", "ico", "tiff", "tga", "qoi", "webp", "pnm", "dds", "hdr", "exr",
] }
resvg = "0.47"          # 纯 Rust SVG 栅格化（re-export usvg / tiny-skia）
webp = "0.3"            # libwebp 源码编译，支持有损质量编码，无系统依赖

[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.62", features = ["Win32_Foundation", "Win32_UI_WindowsAndMessaging"] }

# dev 下也优化依赖（PNG 编码 / 截图捕获等），显著加快 tauri dev 的截图速度；
# 只优化依赖、不优化本 crate，增量编译仍快。
[profile.dev.package."*"]
opt-level = 3
